Funciona todo, falta agregar funcionalidades extra